# static/swagger.json
@@ -16,16 +16,34 @@
   ],
 "swagger": "2.0",
   "paths": {
-    "/api/get-user-list": {
+    "/api/get-user-stat": {
       "get": {
         "summary": "Returns from the database user and their current credits",
         "tags": ["Requests"],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+                "type": "object",
+                "properties": {
+                  "user_{id}": {"type": "object", "properties": {
+                    "id": {"type": "integer"},
+                    "credits": {"type": "integer"},
+                    "draw": {"type": "integer"},
+                    "win": {"type": "integer"},
+                    "lose": {"type": "integer"}
+                  }}
+                }
+            }
           },
           "400": {
-            "description": "No users in the database! You need to create one via /api/create-new-user"
+            "description": "No users in the database! You need to create one via /api/create-new-user",
+            "schema": {
+                "type": "object",
+                "properties": {
+                  "Error": {"type": "string"}
+                }
+            }
           },
           "405": {
             "description": "The method is not allowed for the requested URL. Use GET method."
@@ -48,10 +66,27 @@
         "tags": ["Requests"],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+                "type": "object",
+                "properties": {
+                  "game_{id}": {"type": "object", "properties": {
+                    "user_id": {"type": "integer"},
+                    "result": {"type": "string"},
+                    "credits_before_game": {"type": "integer"},
+                    "game_time": {"type": "string"}
+                  }}
+                }
+            }
           },
           "400": {
-            "description": "There were no games that day!"
+            "description": "There were no games that day!",
+            "schema": {
+                "type": "object",
+                "properties": {
+                  "Error": {"type": "string"}
+                }
+            }
           },
           "405": {
             "description": "The method is not allowed for the requested URL. Use GET method."
@@ -65,7 +100,14 @@
         "tags": ["Requests"],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Returns json with the keys \"user_id\", \"start_credits\"",
+            "schema": {
+                "type": "object",
+                "properties": {
+                  "user_id": {"type": "string"},
+                  "start_credits": {"type": "integer"},
+                }
+            }
           },
           "405": {
             "description": "The method is not allowed for the requested URL. Use GET method."
@@ -95,10 +137,25 @@
         "tags": ["Requests"],
         "responses": {
           "200": {
-            "description": "Returns json with the keys \"result\", \"rng_choice\", \"credits_before_game\", \"credits_after_game\""
+            "description": "Returns json with the keys \"result\", \"rng_choice\", \"credits_before_game\", \"credits_after_game\"",
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "result": {"type": "string"},
+                  "rng_choice": {"type": "string"},
+                  "credits_before_game": {"type": "integer"},
+                  "credits_after_game": {"type": "integer"}
+                }
+            }
           },
           "400": {
-            "description": "You don't have enough credits for the next game or you chose bad parameters You can only choose \"Rock\" \"Paper\" \"Scissors\". If you have 0 credits you can recharge them by /api/add-credits-to-user"
+            "description": "You don't have enough credits for the next game or you chose bad parameters You can only choose \"Rock\" \"Paper\" \"Scissors\". If you have 0 credits you can recharge them by /api/add-credits-to-user",
+            "schema": {
+                "type": "object",
+                "properties": {
+                  "Error": {"type": "string"}
+                }
+            }
           },
           "405": {
             "description": "The method is not allowed for the requested URL. Use GET method."
@@ -129,11 +186,22 @@
           "200": {
             "description": "Returns json with the keys \"Message\", \"User id\", \"Credits\", \"credits_after_game\"",
             "schema": {
-
+              "type": "object",
+              "properties": {
+                "Message": {"type": "string"},
+                "User id": {"type": "integer"},
+                "Credits": {"type": "integer"}
+              }
             }
           },
           "400": {
-            "description": "Only 0 credits users can add new credits!"
+            "description": "Only 0 credits users can add new credits!",
+            "schema": {
+                "type": "object",
+                "properties": {
+                  "Error": {"type": "string"}
+                }
+            }
           },
           "405": {
             "description": "The method is not allowed for the requested URL. Use GET method."
